--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -52,8 +52,8 @@
 <dependencies>
 <dependency>
 <groupId>com.fasterxml.jackson.core</groupId>
-<artifactId>jackson-databind</artifactId>
-<version>2.13.3</version>
+<artifactId>jackson-core</artifactId>
+<version>2.14.2</version>
 </dependency>
 <dependency>
 <groupId>org.springframework.security</groupId>
