--- a/leafclient-1.8.9/settings.gradle
+++ b/leafclient-1.8.9/settings.gradle
@@ -7,4 +7,4 @@
  * in the user guide at https://docs.gradle.org/4.7/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'LeafClient'
+rootProject.name = 'leafclient-1.8.9'
